Fixed stretching issue of logo on home page

--- a/learnscripture/static/css/home.less
+++ b/learnscripture/static/css/home.less
@@ -8,8 +8,6 @@
     img {
         margin-top: 1em;
         max-width: 40%;
-        height: -moz-fit-content;
-        height: fit-content;
     }
 
     p {
